--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "sass": "^1.83.4",
+    "split-type": "^0.3.4",
     "swiper": "^11.1.14",
     "web-vitals": "^4.2.4"
   },
