--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://kimhyera.github.io/portfolio/",
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@studio-freight/lenis": "^1.0.42",
     "cra-template": "1.2.0",
     "gh-pages": "^6.3.0",
@@ -19,9 +20,9 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+ "start": "craco start",
+  "build": "craco build",
+  "test": "craco test",
     "eject": "react-scripts eject",
     "predeploy": "react-scripts build",
     "deploy": "gh-pages -d build"
